--- a/config/database.yml
+++ b/config/database.yml
@@ -50,5 +50,8 @@ test:
 production:
   <<: *default
   database: nostalgia_production
-  username: nostalgia
-  password: <%= ENV['NOSTALGIA_DATABASE_PASSWORD'] %>
+  # username: nostalgia
+  # password: <%= ENV['NOSTALGIA_DATABASE_PASSWORD'] %>
+  username: root
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
